# oslo.privsep

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst
doc/source/contributor/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
oslo.privsep/locale/: oslo.privsep-log-info.pot  oslo.privsep-log-warning.pot  oslo.privsep.pot
oslo.privsep/locale/de/LC_MESSAGES/: oslo.privsep-log-warning.po  oslo.privsep.po
oslo_privsep/: _i18n.py  capabilities.py  comm.py  daemon.py  priv_context.py  version.py
oslo_privsep/functional/: __init__.py  test_daemon.py
oslo_privsep/locale/: oslo_privsep-log-error.pot  oslo_privsep-log-info.pot  oslo_privsep-log-warning.pot  oslo_privsep.pot
oslo_privsep/locale/de/LC_MESSAGES/: oslo_privsep-log-warning.po  oslo_privsep.po
oslo_privsep/locale/en_GB/LC_MESSAGES/: oslo_privsep-log-error.po  oslo_privsep-log-info.po  oslo_privsep-log-warning.po  oslo_privsep.po
oslo_privsep/tests/: fixture.py  test_capabilities.py  test_comm.py  test_daemon.py  test_priv_context.py  test_privsep.py  testctx.py
oslo_privsep/tests/functional/: test_daemon.py
oslo_privsep/tests/unit/: test_capabilities.py  test_daemon.py  test_priv_context.py
releasenotes/notes/: add_entrypoint_with_timeout_decorator-9aab5a74153b3632.yaml  add_thread_pool_size-a54e6f27ab019f96.yaml  auto-restart-client-channel-619545294557bf2b.yaml  context-logger-06b475357bebadc7.yaml  deprecate-eventlet-monkey-patching-c37fea982471c01c.yaml  deprecate-version-module-a0eeae4221afed89.yaml  log-daemon-traceback-45784705e65cf52c.yaml  setgid-should-be-called-before-setuid-fcf01083df9d5369.yaml  un-monkey-patch-privileged-daemon-160e00296549df3d.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/fr/LC_MESSAGES/: releasenotes.po
