[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.privsep"
description = "OpenStack library for privilege separation"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.privsep"
Repository = "https://opendev.org/openstack/oslo.privsep"

[project.scripts]
privsep-helper = "oslo_privsep.daemon:helper_main"

[project.entry-points."oslo.config.opts"]
"oslo.privsep" = "oslo_privsep.priv_context:_list_opts"

[tool.setuptools]
packages = ["oslo_privsep"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ['B404', 'B603']
