[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.privsep"
description = "OpenStack library for privilege separation"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.privsep"
Repository = "https://opendev.org/openstack/oslo.privsep"

[project.scripts]
privsep-helper = "oslo_privsep.daemon:helper_main"

[project.entry-points."oslo.config.opts"]
"oslo.privsep" = "oslo_privsep.priv_context:_list_opts"

[tool.setuptools]
packages = ["oslo_privsep"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "G", "LOG", "S", "UP"]

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
strict = true
disable_error_code = ["import-untyped"]
exclude = '(?x)(doc | releasenotes)'

[[tool.mypy.overrides]]
module = ["oslo_privsep.tests.*", "oslo_privsep.functional.*"]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
