[metadata]
name = oslo.privsep
summary = OpenStack library for privilege separation
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/oslo.privsep/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_privsep

[pbr]
autodoc_index_modules = True
api_doc_dir = reference/api
autodoc_exclude_modules =
  oslo_privsep.tests.*
  oslo_privsep._*

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    privsep-helper = oslo_privsep.daemon:helper_main

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo.privsep/locale
domain = oslo_privsep

[update_catalog]
domain = oslo_privsep
output_dir = oslo_privsep/locale
input_file = oslo_privsep/locale/oslo_privsep.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_privsep/locale/oslo_privsep.pot

[wheel]
universal = true
